Added friend-requests route
